--- a/src/scc-test.properties
+++ b/src/scc-test.properties
@@ -1,4 +1,4 @@
-db_url=com.mysql.driver.class:192.168.22.102.90.32
+db_url=com.mysql.driver.class:192.168.22.102.90.32.23242342342423423
 db_username=backkom
 db_password=backkom
 
