update config properties

--- a/src/scc-test.properties
+++ b/src/scc-test.properties
@@ -1,5 +1,9 @@
-db_url=com.mysql.driver.class:192.168.22.102.9
-db_username=backkom
-db_password=backkom
+db.url=192.168.22.102.9
+db.username=guooo
+db.password=guooo
 
 db.port=3306
+
+switch.sms=true
+switch.promotion=true
+switch.points=true
